Closed Bug 1407601 Opened 7 years ago Closed 7 years ago

Bug 1389965 breaks linux and solaris build

Categories

(Core :: Memory Allocator, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla58
Tracking Status
firefox58 --- fixed

People

(Reporter: baku, Assigned: tjr)

Details

Attachments

(1 file)

xpcshell crashes because of a loop like this:

#1184 0x000000000040638f in moz_xmalloc (size=40) at /home/baku/Sources/m/streams/src/memory/mozalloc/mozalloc.cpp:84
#1185 0x00007f4cdaa946d5 in malloc (size=40) at /home/baku/Sources/m/streams/src/gfx/graphite2/src/MozGrMalloc.h:17
#1186 0x000000000040638f in moz_xmalloc (size=40) at /home/baku/Sources/m/streams/src/memory/mozalloc/mozalloc.cpp:84
#1187 0x00007f4cdaa946d5 in malloc (size=40) at /home/baku/Sources/m/streams/src/gfx/graphite2/src/MozGrMalloc.h:17
Flags: needinfo?(tom)
Solaris is a compiler break as described in https://bugzilla.mozilla.org/show_bug.cgi?id=1389965#c15
Flags: needinfo?(tom)
Summary: Bug 1389965 breaks linux build → Bug 1389965 breaks linux and solaris build
Is there a way to reproduce this? It doesn't break the xpshell tests on Taskcluster: https://treeherder.mozilla.org/#/jobs?repo=try&revision=2131c443d4c53fee78bf40d15684fdc8579a681d&selectedJob=136227676
Flags: needinfo?(amarchesini)
I can reproduce it locally constantly. This is my mozconfig:

mk_add_options MOZ_MAKE_FLAGS="-j4 -s"
ac_add_options --with-ccache=/usr/bin/ccache
ac_add_options --enable-debug
ac_add_options --disable-optimize
ac_add_options --disable-jemalloc

gcc version 5.4.0 20160609 (Ubuntu 5.4.0-6ubuntu1~16.04.4)
Flags: needinfo?(amarchesini)
I will have to investigate this next week, although setting up an environment could be tricky. But I attached a patch needed for Solaris. If this fixes it for you that would be awesome. If not, I will have to revert to an ifdef I suppose.
Assignee: nobody → tom
Hey baku - I seemed to reproduce your dev environment, but I can't get `./mach test xpcshell` to not throw errors even on a version that undoes the #define -> inline function patch.  Would you be able to test the attached patch on this bug and see if it resolves the xpcshell break? If not, we'll #ifdef a case for linux I suppose.
Flags: needinfo?(amarchesini)
It doesn't fix the issue. I still see xpcshell crashing all the time.
Flags: needinfo?(amarchesini) → needinfo?(tom)
Okay, I ifdef for Linux. If the attached patch works for you and looks good we can button this up for both you and Solaris.
Flags: needinfo?(tom)
Comment on attachment 8917575 [details]
Bug 1407601 Revert to the previous behavior in MozGrMalloc.h for Linux, and add extern C to correct Solaris build break

https://reviewboard.mozilla.org/r/188542/#review197936
Attachment #8917575 - Flags: review?(amarchesini) → review+
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/9f9a79521c24
Revert to the previous behavior in MozGrMalloc.h for Linux, and add extern C to correct Solaris build break r=baku
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/9f9a79521c24
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: