Bug 1407601 Revert to the previous behavior in MozGrMalloc.h for Linux, and add extern C to correct Solaris build break r=baku

MozReview-Commit-ID: GP6N6pcqQp

--HG--
extra : rebase_source : a51cbdffcb05631876d458f7a19b295fc0bb4642